# fn_once

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
src/: lib.rs
tests/: basic.rs
